Added event tracking to buttons

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -407,6 +407,10 @@ ul li {
         &.featured-plan{
             background-color: rgba(255,255,255,0.2);
             padding: 20px 0;
+            @media (max-width: $bp-large) {
+                margin-top: 20px;
+                margin-bottom: 20px;
+            }
             margin-top: -30px;
         }
         
