--- a/css/main.css
+++ b/css/main.css
@@ -484,6 +484,10 @@ ul li {
       background-color: rgba(255, 255, 255, 0.2);
       padding: 20px 0;
       margin-top: -30px; }
+      @media (max-width: 1024px) {
+        .pricing .plan-details.featured-plan {
+          margin-top: 20px;
+          margin-bottom: 20px; } }
 
 /* ==========================================================================
 	$Footer
@@ -568,7 +572,7 @@ ul li {
 
 @font-face {
   font-family: "elegant-theme-line";
-  src: url('../fonts/elegant-theme-line.ttf?1447559218') format('truetype'), url('../fonts/elegant-theme-line.eot?1447559218') format('embedded-opentype'), url('../fonts/elegant-theme-line.svg?1447559218') format('svg'), url('../fonts/elegant-theme-line.woff?1447559218') format('woff'); }
+  src: url('../fonts/elegant-theme-line.ttf?1489679486') format('truetype'), url('../fonts/elegant-theme-line.eot?1489679486') format('embedded-opentype'), url('../fonts/elegant-theme-line.svg?1489679486') format('svg'), url('../fonts/elegant-theme-line.woff?1489679486') format('woff'); }
 .icon {
   font-family: 'elegant-theme-line';
   speak: none;
