Added thank you page

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ p {
   color: #6c7279; }
 
 h1 {
-  font-size: 65px;
+  font-size: 60px;
   color: #2d3033; }
 
 h2 {
@@ -896,3 +896,6 @@ ul li {
   padding: 25px; }
   .modal .modal-dialog .modal-content .modal-body .form-fields {
     padding: 25px 0; }
+
+.fb_iframe_widget span {
+  vertical-align: baseline !important; }
